--- a/file_fr_FR.po
+++ b/file_fr_FR.po
@@ -5,10 +5,8 @@ msgstr "wwww"
 msgid "22222_2"
 msgstr "22222"
 msgid "FINAL_3"
-msgstr "FINAL"
+msgstr "FINALE"
 msgid "monday_4"
-msgstr "monday"
+msgstr "lundi"
 msgid "book_5"
-msgstr "book"
-msgid "tuesday_6"
-msgstr "tuesday"
+msgstr "réserver"
